--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   shared_preferences: ^2.5.3
   equatable: ^2.0.7
   dio: ^5.8.0+1
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
